force-app/main/default/objects/HRCFSL_Inspection_Step__c/HRCFSL_Inspection_Step__c.object-meta.xml
<CustomObject>
    <label>Inspection Step</label>
    <nameField>
        <label>Inspection Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>