force-app/main/default/objects/HRCFSL_Inspection_Step__c/fields/HRCFSL_Comments__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>