force-app/main/default/objects/HRCFSL_Inspection_Step__c/fields/HRCFSL_Input__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Input__c</fullName>
    <label>Input</label>
    <length>30</length>
    <type>Text</type>
</CustomField>