force-app/main/default/objects/HRCFSL_Inspection_Step__c/fields/HRCFSL_Is_Visited__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Is_Visited__c</fullName>
    <label>Is Visited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>