force-app/main/default/objects/HRCFSL_Inspection_Step__c/fields/HRCFSL_IsVisited__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_IsVisited__c</fullName>
    <label>IsVisited</label>
    <length>255</length>
    <type>Text</type>
</CustomField>