force-app/main/default/objects/HRCFSL_Inspection_Step__c/fields/HRCFSL_Marker__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Marker__c</fullName>
    <label>Marker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>