force-app/main/default/objects/HRCFSL_Inspection_Step__c/fields/HRCFSL_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Record_Type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>