force-app/main/default/objects/HRCFSL_Inspection_Step__c/fields/HRCFSL_Sequence_Txt__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Sequence_Txt__c</fullName>
    <description>Field created to fix a bug in the Field Service Mobile app to properly sort steps in the FSL flow.</description>
    <formula>IF( HRCFSL_Sequence__c &lt; 10, 

&apos;0&apos; &amp; TEXT(HRCFSL_Sequence__c ), 


TEXT(HRCFSL_Sequence__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequence Txt</label>
    <type>Text</type>
</CustomField>