force-app/main/default/objects/HRCFSL_Inspection_Step__c/fields/HRCFSL_Upper_Range__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Upper_Range__c</fullName>
    <label>Upper Range</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>