force-app/main/default/objects/HRCFSL_Inspection_Step__c/fields/HRCFSL_Visited__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Visited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visited</label>
    <type>Checkbox</type>
</CustomField>