force-app/main/default/objects/HRCFSL_Inspection_Step__c/fields/HRCFSL_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Inspection Steps</relationshipLabel>
    <relationshipName>Inspection_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>