force-app/main/default/objects/HRCFSL_Inspection_Step__c/recordTypes/HRCFSL_Display_Text.recordType-meta.xml
<RecordType>
    <fullName>HRCFSL_Display_Text</fullName>
    <active>true</active>
    <label>Display Text</label>
</RecordType>